--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "bot",
   "version": "1.0.0",
   "description": "tutorial",
-  "main": "test.js",
+  "main": "git-ls-remote.js",
   "scripts": {
-    "start": "node test.js",
+    "start": "node git-ls-remote.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@slack/client": "^3.15.0"
+    "@slack/client": "^3.15.0",
+    "node-schedule": "^1.3.0",
+    "node-shell-parser": "^0.2.1"
   }
 }
